Completed problem 1 and 2 and displayed them in html

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div>
                 <p>Array.prototype.map()</p>
                 <ol>
-                    <li>Give us an array of the inventory of first and last names. </li>
+                    <li>Give us an array of the inventors' first and last names. </li>
                     <p class="answer-2">(answer here)</p>
                 </ol>
             </div>
